--- a/composer.json
+++ b/composer.json
@@ -8,19 +8,19 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^8.0.2",
-        "laravel/framework": "^9.0",
+        "php": "^8.1",
+        "laravel/framework": "^10.0",
         "laravel/legacy-factories": "^1.3",
-        "laravel/tinker": "^2.0",
-        "pusher/pusher-php-server": "^5.0"
+        "laravel/tinker": "^2.8",
+        "pusher/pusher-php-server": "^7.2"
     },
     "require-dev": {
-        "spatie/laravel-ignition": "^1.0",
-        "fzaninotto/faker": "^1.9.2",
-        "laravel/ui": "^3.0",
-        "mockery/mockery": "^1.0",
-        "nunomaduro/collision": "^6.1",
-        "phpunit/phpunit": "^9.0"
+        "spatie/laravel-ignition": "^2.0",
+        "fakerphp/faker": "^1.9.2",
+        "laravel/ui": "^4.2",
+        "mockery/mockery": "^1.4.4",
+        "nunomaduro/collision": "^7.0",
+        "phpunit/phpunit": "^10.0"
     },
     "config": {
         "optimize-autoloader": true,
@@ -47,7 +47,7 @@
             "Tests\\": "tests/"
         }
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "prefer-stable": true,
     "scripts": {
         "post-autoload-dump": [
