--- a/package.json
+++ b/package.json
@@ -2,29 +2,34 @@
     "private": true,
     "scripts": {
         "dev": "npm run development",
-        "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "watch": "npm run development -- --watch",
-        "watch-poll": "npm run watch -- --watch-poll",
-        "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "development": "mix",
+        "watch": "mix watch",
+        "watch-poll": "mix watch -- --watch-options-poll=1000",
+        "hot": "mix watch --hot",
         "prod": "npm run production",
-        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+        "production": "mix --production"
     },
     "devDependencies": {
-        "axios": "^0.19",
-        "bootstrap": "^4.0.0",
-        "cross-env": "^6.0",
-        "jquery": "^3.2",
+        "axios": "^1.6.0",
+        "bootstrap": "^4.6.2",
+        "cross-env": "^7.0",
+        "jquery": "^3.7.0",
         "laravel-mix": "^6.0.49",
         "lodash": "^4.17.21",
-        "popper.js": "^1.12",
-        "resolve-url-loader": "^2.3.1",
-        "sass": "^1.20.1",
-        "sass-loader": "^8.0.0",
-        "vue": "^2.5.17",
-        "vue-template-compiler": "^2.6.10"
+        "popper.js": "^1.16.1",
+        "postcss": "^8.4.31",
+        "resolve-url-loader": "^5.0.0",
+        "sass": "^1.69.0",
+        "sass-loader": "^12.1.0",
+        "vue": "^3.3.0",
+        "vue-loader": "^17.3.0",
+        "@vue/compiler-sfc": "^3.3.0"
     },
     "dependencies": {
-        "laravel-echo": "^1.8.0",
-        "pusher-js": "^6.0.3"
+        "laravel-echo": "^1.15.0",
+        "pusher-js": "^8.3.0"
+    },
+    "overrides": {
+        "webpack-dev-server": "^5.0.0"
     }
 }
